--- a/QnA.html
+++ b/QnA.html
@@ -24,7 +24,7 @@
           <img src="logo.png">
           <h1><span class="text-4xl">Dev</span><span class="text-4xl font-bold">Board</span></h1>
         </div>
-        <div>
+        <div  id="BackToHome">
             <button class="bg-[#3752FD] text-white rounded-lg text-base font-medium p-2">Back to Home</button>
         </div>
       </div>
@@ -58,6 +58,6 @@
 
         </section>
 
-    
+        <script src="script.js"></script> 
 </body>
 </html>
