--- a/index.html
+++ b/index.html
@@ -50,12 +50,12 @@
             </div>
           </div>
           <!-- second -->
-          <div>
-            <div class="m-2 p-4 rounded-lg flex items-center bg-linear-to-r from-[#3752FD] to-[#9BA8F8] col-span-2">
+           <div>
+            <div id="QnA" class="m-2 p-4 rounded-lg flex items-center bg-linear-to-r from-[#3752FD] to-[#9BA8F8] col-span-2">
               <img src="board.png">
               <p class="text-white text-2xl font-medium">Discover Something <br> New Today!</p>
             </div>
-          </div>
+            </div>
           <!-- third -->
           <div class="m-2 p-4 bg-[#E6EDFF] rounded-lg flex space-x-2">
             <div class="bg-white rounded-full p-2">
@@ -78,7 +78,7 @@
          <p class="bg-white mr-2 p-2 rounded-lg mt-4">Debug using Chrome DevTools, check for overlapping elements.</p>
          <div class="flex justify-between m-2">
           <p><span>Deadline</span><br><span class="font-medium">21 March 2025</span></p>
-          <button class="bg-[#3752FD] text-white rounded-lg text-base font-medium px-4 mt-4">Completed</button>
+          <button id="Completed" class="bg-[#3752FD] text-white rounded-lg text-base font-medium px-4 mt-4">Completed</button>
           </div>
         </div>
 
@@ -88,7 +88,7 @@
           <p class="bg-white mr-2 p-2 rounded-lg mt-4">Debug using Chrome DevTools, check for overlapping elements.</p>
           <div class="flex justify-between m-2">
            <p><span>Deadline</span><br><span class="font-medium">21 March 2025</span></p>
-           <button class="bg-[#3752FD] text-white rounded-lg text-base font-medium px-4 mt-4">Completed</button>
+           <button id="Completed" class="bg-[#3752FD] text-white rounded-lg text-base font-medium px-4 mt-4">Completed</button>
            </div>
          </div>
 
@@ -98,7 +98,7 @@
           <p class="bg-white mr-2 p-2 rounded-lg mt-4">Debug using Chrome DevTools, check for overlapping elements.</p>
           <div class="flex justify-between m-2">
            <p><span>Deadline</span><br><span class="font-medium">21 March 2025</span></p>
-           <button class="bg-[#3752FD] text-white rounded-lg text-base font-medium px-4 mt-4">Completed</button>
+           <button id="Completed" class="bg-[#3752FD] text-white rounded-lg text-base font-medium px-4 mt-4">Completed</button>
            </div>
          </div>
 
@@ -108,7 +108,7 @@
           <p class="bg-white mr-2 p-2 rounded-lg mt-4">Debug using Chrome DevTools, check for overlapping elements.</p>
           <div class="flex justify-between m-2">
            <p><span>Deadline</span><br><span class="font-medium">21 March 2025</span></p>
-           <button class="bg-[#3752FD] text-white rounded-lg text-base font-medium px-4 mt-4">Completed</button>
+           <button id="Completed" class="bg-[#3752FD] text-white rounded-lg text-base font-medium px-4 mt-4">Completed</button>
            </div>
          </div>
 
@@ -118,7 +118,7 @@
           <p class="bg-white mr-2 p-2 rounded-lg mt-4">Debug using Chrome DevTools, check for overlapping elements.</p>
           <div class="flex justify-between m-2">
            <p><span>Deadline</span><br><span class="font-medium">21 March 2025</span></p>
-           <button class="bg-[#3752FD] text-white rounded-lg text-base font-medium px-4 mt-4">Completed</button>
+           <button id="Completed" class="bg-[#3752FD] text-white rounded-lg text-base font-medium px-4 mt-4">Completed</button>
            </div>
          </div>
 
@@ -128,7 +128,7 @@
           <p class="bg-white mr-2 p-2 rounded-lg mt-4">Debug using Chrome DevTools, check for overlapping elements.</p>
           <div class="flex justify-between m-2">
            <p><span>Deadline</span><br><span class="font-medium">21 March 2025</span></p>
-           <button class="bg-[#3752FD] text-white rounded-lg text-base font-medium px-4 mt-4">Completed</button>
+           <button id="Completed" class="bg-[#3752FD] text-white rounded-lg text-base font-medium px-4 mt-4">Completed</button>
            </div>
          </div>
 
@@ -139,7 +139,7 @@
             <h3 class="font-medium text-xl">Activity Log</h3>
           </div>
           <div class="flex justify-center">
-            <button class="bg-[#3752FD] text-white rounded-lg text-base font-medium p-2">Clear History</button>
+            <button id="clearHistory" class="bg-[#3752FD] text-white rounded-lg text-base font-medium p-2">Clear History</button>
           </div>
         </div>
           </div>
@@ -153,5 +153,6 @@
     <footer>
 
     </footer>
+    <script src="script.js"></script>
 </body>
 </html>
