--- a/QnA.html
+++ b/QnA.html
@@ -24,8 +24,8 @@
           <img src="logo.png">
           <h1><span class="text-4xl">Dev</span><span class="text-4xl font-bold">Board</span></h1>
         </div>
-        <div  id="BackToHome">
-            <button class="bg-[#3752FD] text-white rounded-lg text-base font-medium p-2">Back to Home</button>
+        <div>
+            <button id="BackToHome" class="bg-[#3752FD] text-white rounded-lg text-base font-medium p-2">Back to Home</button>
         </div>
       </div>
     </nav>
@@ -57,6 +57,12 @@
     </div>
 
         </section>
+        <script>
+            document.getElementById('BackToHome').addEventListener("click", 
+     function (){
+            window.location.href="index.html"
+    })
+        </script>
 
         <script src="script.js"></script> 
 </body>
