--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
          <p class="bg-white mr-2 p-2 rounded-lg mt-4">Debug using Chrome DevTools, check for overlapping elements.</p>
          <div class="flex justify-between m-2">
           <p><span>Deadline</span><br><span class="font-medium">21 March 2025</span></p>
-          <button id="Completed" class="bg-[#3752FD] text-white rounded-lg text-base font-medium px-4 mt-4">Completed</button>
+          <button id="Completed" class=" bg-[#3752FD] text-white rounded-lg text-base font-medium px-4 mt-4">Completed</button>
           </div>
         </div>
 
@@ -88,7 +88,7 @@
           <p class="bg-white mr-2 p-2 rounded-lg mt-4">Debug using Chrome DevTools, check for overlapping elements.</p>
           <div class="flex justify-between m-2">
            <p><span>Deadline</span><br><span class="font-medium">21 March 2025</span></p>
-           <button id="Completed" class="bg-[#3752FD] text-white rounded-lg text-base font-medium px-4 mt-4">Completed</button>
+           <button  id="Completed2" class="bg-[#3752FD] text-white rounded-lg text-base font-medium px-4 mt-4">Completed</button>
            </div>
          </div>
 
@@ -98,7 +98,7 @@
           <p class="bg-white mr-2 p-2 rounded-lg mt-4">Debug using Chrome DevTools, check for overlapping elements.</p>
           <div class="flex justify-between m-2">
            <p><span>Deadline</span><br><span class="font-medium">21 March 2025</span></p>
-           <button id="Completed" class="bg-[#3752FD] text-white rounded-lg text-base font-medium px-4 mt-4">Completed</button>
+           <button id="Completed3" class="bg-[#3752FD] text-white rounded-lg text-base font-medium px-4 mt-4">Completed</button>
            </div>
          </div>
 
@@ -108,7 +108,7 @@
           <p class="bg-white mr-2 p-2 rounded-lg mt-4">Debug using Chrome DevTools, check for overlapping elements.</p>
           <div class="flex justify-between m-2">
            <p><span>Deadline</span><br><span class="font-medium">21 March 2025</span></p>
-           <button id="Completed" class="bg-[#3752FD] text-white rounded-lg text-base font-medium px-4 mt-4">Completed</button>
+           <button id="Completed4" class="bg-[#3752FD] text-white rounded-lg text-base font-medium px-4 mt-4">Completed</button>
            </div>
          </div>
 
@@ -118,7 +118,7 @@
           <p class="bg-white mr-2 p-2 rounded-lg mt-4">Debug using Chrome DevTools, check for overlapping elements.</p>
           <div class="flex justify-between m-2">
            <p><span>Deadline</span><br><span class="font-medium">21 March 2025</span></p>
-           <button id="Completed" class="bg-[#3752FD] text-white rounded-lg text-base font-medium px-4 mt-4">Completed</button>
+           <button id="Completed5" class="bg-[#3752FD] text-white rounded-lg text-base font-medium px-4 mt-4">Completed</button>
            </div>
          </div>
 
@@ -128,7 +128,7 @@
           <p class="bg-white mr-2 p-2 rounded-lg mt-4">Debug using Chrome DevTools, check for overlapping elements.</p>
           <div class="flex justify-between m-2">
            <p><span>Deadline</span><br><span class="font-medium">21 March 2025</span></p>
-           <button id="Completed" class="bg-[#3752FD] text-white rounded-lg text-base font-medium px-4 mt-4">Completed</button>
+           <button id="Completed6" class="bg-[#3752FD] text-white rounded-lg text-base font-medium px-4 mt-4">Completed</button>
            </div>
          </div>
 
@@ -153,6 +153,36 @@
     <footer>
 
     </footer>
+    <script>
+      document.getElementById('Completed').addEventListener('click',function(){
+        console.log(1)
+      })
+      document.getElementById('Completed2').addEventListener('click',function(){
+        console.log(2)
+      })
+      document.getElementById('Completed3').addEventListener('click',function(){
+        console.log(3)
+      })
+      document.getElementById('Completed4').addEventListener('click',function(){
+        console.log(4)
+      })
+      document.getElementById('Completed5').addEventListener('click',function(){
+        console.log(5)
+      })
+      document.getElementById('Completed6').addEventListener('click',function(){
+        console.log(6)
+      })
+    
+
+
+      document.getElementById('clearHistory').addEventListener("click", 
+        function(){
+            alert("History Cleared")
+
+        })
+    
+
+    </script>
     <script src="script.js"></script>
 </body>
 </html>
