--- a/index.html
+++ b/index.html
@@ -154,24 +154,38 @@
 
     </footer>
     <script>
-      document.getElementById('Completed').addEventListener('click',function(){
-        console.log(1)
+
+      const Completed= document.getElementById('Completed');
+      Completed.addEventListener('click',function(){
+        alert("Board Updated Successfully")
+        Completed.disabled = true;
       })
-      document.getElementById('Completed2').addEventListener('click',function(){
-        console.log(2)
+      const Completed2= document.getElementById('Completed2');
+      Completed2.addEventListener('click',function(){
+        alert("Board Updated Successfully")
+        Completed2.disabled = true;
       })
-      document.getElementById('Completed3').addEventListener('click',function(){
-        console.log(3)
+      const Completed3= document.getElementById('Completed3');
+      Completed3.addEventListener('click',function(){
+        alert("Board Updated Successfully")
+        Completed3.disabled = true;
       })
-      document.getElementById('Completed4').addEventListener('click',function(){
-        console.log(4)
+      const Completed4= document.getElementById('Completed4');
+      Completed4.addEventListener('click',function(){
+        alert("Board Updated Successfully")
+        Completed4.disabled = true;
       })
-      document.getElementById('Completed5').addEventListener('click',function(){
-        console.log(5)
+      const Completed5= document.getElementById('Completed5');
+      Completed5.addEventListener('click',function(){
+        alert("Board Updated Successfully")
+        Completed5.disabled = true;
       })
-      document.getElementById('Completed6').addEventListener('click',function(){
-        console.log(6)
+      const Completed6= document.getElementById('Completed6');
+      Completed6.addEventListener('click',function(){
+        alert("Board Updated Successfully")
+        Completed6.disabled = true;
       })
+      
     
 
 
