--- a/QnA.html
+++ b/QnA.html
@@ -33,26 +33,28 @@
 
     <div>
     <h2 class="font-bold text-2xl">Question-1: What are the different ways to select an element in the DOM?</h2>
-    <p></p>
+    <p class="font-semibold text-xl m-5">1.getElementById<br>2.getElementsByClassName<br>3.getElementsByTagName<br>4.querySelector<br>5.querySelectorAll<br></p>
 
     <h2 class="font-bold text-2xl">Question-2: What is the difference between innerHTML, innerText, and textContent ?
     </h2>
-    <p></p>
+    <p class="font-semibold text-xl m-5">innerHTML:<br>Gets or sets the HTML markup contained within an element.Can be manipulate to insert HTML content.<br>
+                                         innerText:<br>Gets or sets the rendered text content of an element.Considers CSS styling and layout.<br>
+                                         textContent:<br>Gets or sets the text content of an element and its descendants.Treats all content as plain text.</p>
 
 
     <h2 class="font-bold text-2xl">Question-3: What is event delegation in the DOM?
     </h2>
-    <p></p>
+    <p class="font-semibold text-xl m-5">Event delegation in the DOM is a technique where a single event listener can be attach to a parent element.</p>
 
 
     <h2 class="font-bold text-2xl">Question-4: What is event bubbling in the DOM?
     </h2>
-    <p></p>
+    <p class="font-semibold text-xl m-5">When an event occurs on a DOM element, it does not just happen on that element. It propagates up the DOM tree, from the target element to its grandparent, and so on, until it reaches the root of the document.</p>
 
 
     <h2 class="font-bold text-2xl"> Question-5: How do you create, add, and remove elements using JavaScript?
     </h2>
-    <p></p>
+    <p class="font-semibold text-xl m-5"></p>
 
     </div>
 
