--- a/QnA.html
+++ b/QnA.html
@@ -54,7 +54,12 @@
 
     <h2 class="font-bold text-2xl"> Question-5: How do you create, add, and remove elements using JavaScript?
     </h2>
-    <p class="font-semibold text-xl m-5"></p>
+    <p class="font-semibold text-xl m-5">Creating Elements:<br>
+                                         document.createElement(tagName)<br>
+                                        Adding Elements:<br>
+                                         appendChild(element)<br>
+                                        Removing Elements:<br>
+                                          removeChild(element)</p>
 
     </div>
 
